# win32_fopencookie

./: .gitignore  CMakeLists.txt  README.md  cookie_test.c  fopencookie.c  gitDeps.sh  myglib.h
inc/: myglib.h
src/: fmemopen.c  fopencookie.c
test/: cookie_test.c  mem_test.c
